# rofi-taskwarrior

./: Cargo.toml  LICENSE.md  README.md  shell.nix  unstable.nix
src/: main.rs  rofi.rs  taskwarrior.rs
