[package]
name = "rofi-taskwarrior"
version = "0.2.0"
authors = ["Judson Lester <nyarly@gmail.com>"]
edition = "2018"
description = "A rofi script modi for taskwarrior"
readme = "README.md"
repository = "https://github.com/nyarly/rofi-taskwarrior"
license = "Parity-6.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.0", features = ["serde"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
rmp-serde = "^0.15.4"
base64 = "^0.13.0"
tabular = "^0.1.4"
