[package]
name = "rofi-taskwarrior"
version = "0.3.1"
authors = ["Judson Lester <nyarly@gmail.com>"]
edition = "2018"
description = "A rofi script modi for taskwarrior"
readme = "README.md"
repository = "https://github.com/nyarly/rofi-taskwarrior"
license-file = "LICENSE.md"

[dependencies]
chrono = { version = "^0.4.20", features = ["serde"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
rmp-serde = "^0.15.4"
base64 = "^0.13.0"
tabular = "^0.1.4"
log = "^0.4.0"
simplelog = "^0.10.0"
tap = "^1.0.1"
